Add: Kunert: Gadgets lassen Blinde nicht wieder sehen

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -256,6 +256,10 @@
       <li>
         <a href="http://www.computer-fuer-behinderte.de/index.htm" hreflang="de" lang="de">Kommunikations- und Computerhilfen &mdash; <abbr>Dr.</abbr> Elisabeth Seveke <abbr>e.K.</abbr></a>.
       </li>
+      <li><span lang="de">Kunert, Heiko:
+        <a href="https://leidmedien.de/aktuelles/gadgets-blinde/" hreflang="de">Gadgets lassen Blinde nicht wieder sehen</a>,
+        <i class="website">Leidmedien</i></span>, 21.11.2017.
+      </li>
     </ul>
 
   </main>
