ADd: Elements with overflow: scroll become focusable

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -995,7 +995,7 @@
         <i class="blog">The Paciello Group blog</i>, 12.02.2008.
       </li>
       <li>Leadbetter, Tom:
-        <a href="http://html5doctor.com/the-abbr-element/">The abbr element </a>,
+        <a href="http://html5doctor.com/the-abbr-element/">The abbr element</a>,
         <i class="website"><abbr>HTML</abbr>5 Doctor</i>, 30.11.2010.
       </li>
       <li>Day, Alexander:
@@ -1274,6 +1274,10 @@
       -->
       <!--Accessibility books:
         * Jonathan Lazar: Universal Usability: Designing Computer Interfaces for Diverse User Populations. 2007.
+        * Jalal Mahmud: Transaction Models for Web Accessibility: Machine Learning Techniques to Bridge the Divide of Web Accessibility. 2010. (PhD thesis?) https://www.amazon.de/Transaction-Models-Web-Accessibility-Techniques/dp/3639233026/
+        * Langdon et al: Inclusive Designing: Joining Usability, Accessibility, and Inclusion. Springer, 2014
+        * Lazar et al: Ensuring Digital Accessibility through Process and Policy. Morgan Kaufmann, 2015.
+        * Yesilada & Harper: Web Accessibility: A Foundation for Research. Springer, 2019.
       -->
       <li>
         <a href="http://www.webaxe.org/web-accessibility-books/">Web Accessibility Books</a>,
@@ -1639,6 +1643,10 @@
       </li>
       <li><span lang="de"><a href="https://www.zweiterblick.at/index.php" hreflang="de">Zweiter Blick: Startseite f&uuml;r digitale Barrierefreiheit</a></span>.
         <!--also has its own "Darstellungsoptionen"-->
+      </li>
+      <li>
+        <a href="https://cassey-til.glitch.me/posts/2019-11-19-overflow-scroll-gets-focus/">Elements with <code>overflow: scroll</code> become focusable</a>,
+        <i class="blog">Today Cassey Learned</i>, 19.11.2019.
       </li>
     </ul>
 
