--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
     <h2>Unsorted Links</h2>
     <h3>European Projects</h3>
     <ul>
-      <li>The website of the European project 
+      <li><del datetime="2020-02-26">The website of the European project
         European Internet Inclusion Initiative <abbr>EIII</abbr> (2013-2015)
         also has a <a href="http://www.eiii.eu/resources/">resources page</a>.
         However, more importantly, the 
         <strong>search form</strong> helps you find accessibility-related
-        resources on the Web.
-        <!-- Searches mostly W3C and the eAccessPlus wiki, which seems to be down. -->
+        resources on the Web.</del>
+        <!--Searches mostly W3C and the eAccessPlus wiki, which seems to be down. -->
       </li>
       <li><a href="http://able-to-include.com/">Able to Include</a>:
         <q>Using assistive technology to help people with intellectual disabilities use social media.</q>
