--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
     <h2>Unsorted Links</h2>
     <h3>European Projects</h3>
     <ul>
+      <li>
+        <a href="https://www.funka.com/en/projekt/we4authors/">We4authors</a>:
+        <q>We4Authors is the acronym of “Pilot on WEb accessibility FOR web AUTHORing toolS producers and communities”</q>.
+        <!--@@website has BrowseAloud-->
+      </li>
       <li><del datetime="2020-02-26">The website of the European project
         European Internet Inclusion Initiative <abbr>EIII</abbr> (2013-2015)
         also has a <a href="http://www.eiii.eu/resources/">resources page</a>.
