Add Impact Project

--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
         <q>We4Authors is the acronym of “Pilot on WEb accessibility FOR web AUTHORing toolS producers and communities”</q>.
         <!--@@website has BrowseAloud-->
       </li>
+      <li>
+        <a href="https://impact-access.eu/">Impact Project</a>:
+        <q>IMPACT aims to create an expert training program on digital accessibility. This training will develop the skills of the experts so that they are able to provide high quality accessible content in different digital contexts.</q>
+      </li>
       <li><del datetime="2020-02-26">The website of the European project
         European Internet Inclusion Initiative <abbr>EIII</abbr> (2013-2015)
         also has a <a href="http://www.eiii.eu/resources/">resources page</a>.
