Add link rel=top to head element

--- a/LICENCE.html
+++ b/LICENCE.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" type="text/css" href="//creativecommons.org/includes/deed3.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="//creativecommons.org/includes/deed3-print.css" media="print" />
+  <link rel="top" href="index.html" title="Accessibility Resources home page" />
   <!--[if lt IE 7]><link rel="stylesheet" type="text/css" href="//creativecommons.org/includes/deed3-ie.css" media="screen" /><![endif]-->
   <style type="text/css">
     #deed-main a { font-weight: normal; }
