--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -399,6 +399,11 @@
         <a href="https://www.levelaccess.com/css-background-images-and-accessibility/"><abbr>CSS</abbr> Background Images and Accessibility</a>,
         <i class="blog">Level Access</i>, 14.06.2011.
       </li>
+      <li>Sharif, Ather:
+        <a href="https://www.24a11y.com/2019/a-picture-says-a-thousand-words-but-not-really/">A Picture Says a Thousand Words, But Not Really</a>,
+        <i class="website">24 Accessibility</i>, 06.12.2019.
+        <!--@@summarise-->
+      </li>
     </ul>
 
     <h3>Accessible <abbr title="Scalable Vector Graphis">SVG</abbr></h3>
