Create separate h3 for carousels

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -897,6 +897,18 @@
       <!--See also: HTML5.2: Range state: https://www.w3.org/TR/html5/sec-forms.html#range-state-typerange -->
     </ul>
 
+    <h3>Carousels</h3>
+    <ul>
+      <li>
+        <a href="https://van11y.net/accessible-carrousel/">Accessible carrousel using <abbr>ARIA</abbr></a>,
+        <i class="website">Van11y</i> (no date).
+      </li>
+      <li>Pickering, Heydon:
+        <a href="https://inclusive-components.design/a-content-slider/">A Content Slider</a>,
+        <i class="website">Inclusive Components</i>, 22.11.2017.
+      </li>
+    </ul>
+
     <h3>Other User Interface Components or Widgets</h3>
     <ul>
       <li>
@@ -906,11 +918,6 @@
         Some of the components are also listed below.
         (See also <a href="http://heydonworks.com/practical_aria_examples/"><abbr>ARIA</abbr> Examples</a>,
         which contains older examples written in jQuery.)
-      </li>
-      <li>Pickering, Heydon:
-        <a href="https://inclusive-components.design/a-content-slider/">A Content Slider</a>,
-        <i class="website">Inclusive Components</i>, 22.11.2017.
-        Article about carousels.
       </li>
       <li>Pickering, Heydon:
         <a href="http://heydonworks.com/practical_aria_examples/"><abbr>ARIA</abbr> examples</a>,
