Jon Gunderson: Bootstrap 3.3 Carousel Accessibility Examples

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -907,6 +907,10 @@
         <a href="https://inclusive-components.design/a-content-slider/">A Content Slider</a>,
         <i class="website">Inclusive Components</i>, 22.11.2017.
       </li>
+      <li>
+        <a href="https://jongund.github.io/aria-examples/bootstrap-carousel/index.html">Bootstrap 3.3 Carousel Accessibility Examples</a>,
+        <i class="website">jongund (Jon Gunderson</i> (University of Illinois) on GitHub.
+      </li>
     </ul>
 
     <h3>Other User Interface Components or Widgets</h3>
