Add: WAI-ARIA Authoring Practices 1.2: Auto-Rotating Image Carousel Example

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -911,6 +911,10 @@
         <a href="https://jongund.github.io/aria-examples/bootstrap-carousel/index.html">Bootstrap 3.3 Carousel Accessibility Examples</a>,
         <i class="website">jongund (Jon Gunderson</i> (University of Illinois) on GitHub.
       </li>
+      <li>
+        <a href="https://w3c.github.io/aria-practices/examples/carousel/carousel-1.html">Auto-Rotating Image Carousel Example</a>,
+        <i class="website"><abbr>WAI</abbr>-<abbr>ARIA</abbr> Authoring Practices 1.2 (<abbr>W3C</abbr> on GitHub)</i>.
+      </li>
     </ul>
 
     <h3>Other User Interface Components or Widgets</h3>
