Add: Athena ICT: ARIA carousel example

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -915,6 +915,10 @@
         <a href="https://w3c.github.io/aria-practices/examples/carousel/carousel-1.html">Auto-Rotating Image Carousel Example</a>,
         <i class="website"><abbr>WAI</abbr>-<abbr>ARIA</abbr> Authoring Practices 1.2 (<abbr>W3C</abbr> on GitHub)</i>.
       </li>
+      <li>
+        <a href="http://accessibility.athena-ict.com/aria/examples/carousel.shtml"><abbr>ARIA</abbr> carousel example</a>,
+        <i class="website">Accessibility at Athena <abbr>ICT</abbr></i>.
+      </li>
     </ul>
 
     <h3>Other User Interface Components or Widgets</h3>
