--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -919,6 +919,10 @@
         <a href="http://accessibility.athena-ict.com/aria/examples/carousel.shtml"><abbr>ARIA</abbr> carousel example</a>,
         <i class="website">Accessibility at Athena <abbr>ICT</abbr></i>.
       </li>
+      <li>
+        <a href="https://www.w3.org/WAI/tutorials/carousels/">Carousel Concepts</a>,
+        <i class="website"><abbr>W3C</abbr> Web Accessibility Tutorials</i>.
+      </li>
     </ul>
 
     <h3>Other User Interface Components or Widgets</h3>
