Add: Wild: The Unbearable Inaccessibility of Slideshows

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -923,6 +923,10 @@
         <a href="https://www.w3.org/WAI/tutorials/carousels/">Carousel Concepts</a>,
         <i class="website"><abbr>W3C</abbr> Web Accessibility Tutorials</i>.
       </li>
+      <li>Wild, Gian:
+        <a href="https://www.sitepoint.com/unbearable-accessible-slideshow/">The Unbearable Inaccessibility of Slideshows</a>,
+        <i class="website">Sitepoint</i>, 23.02.2015.
+      </li>
     </ul>
 
     <h3>Other User Interface Components or Widgets</h3>
