Add: Creative Bloq: Accessibility expert warns: stop using carousels

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -927,6 +927,10 @@
         <a href="https://www.sitepoint.com/unbearable-accessible-slideshow/">The Unbearable Inaccessibility of Slideshows</a>,
         <i class="website">Sitepoint</i>, 23.02.2015.
       </li>
+      <li>
+        <a href="https://www.creativebloq.com/accessibility-expert-warns-stop-using-carousels-7133778">Accessibility expert warns: stop using carousels</a>,
+        <i class="website">Creative Bloq</i>, 10.07.2013.
+      </li>
     </ul>
 
     <h3>Other User Interface Components or Widgets</h3>
