Add: W3C: Digital Publishing WAI-ARIA Module 1.0

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -735,6 +735,9 @@
       <li><a href="https://daisy.github.io/ace/"><abbr title="Accessibility Checker for ePub">Ace</abbr>, by <abbr>DAISY</abbr></a>:
         an open-source accessibility checker for <abbr>EPUB</abbr>.
       </li>
+      <li>
+        <a href="https://www.w3.org/TR/dpub-aria-1.0/">Digital Publishing <abbr>WAI-ARIA</abbr> Module 1.0: <abbr>W3C</abbr> Recommendation 14 December 2017</a>.
+      </li>
       <li>Collinson, Simon:
         <a href="https://inclusivepublishing.org/blog/ace-daisy-essential-tool-ebook-developers-workbelt/">Ace by <abbr>DAISY</abbr>: An Essential Tool for the ebook Developer’s Workbelt</a>,
         <i class="blog">Inclusive Publishing blog</i>, 29.01.2018.
