Add: Stefan Brechbühl: Barrierefreies PDF

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -215,6 +215,10 @@
         <i class="blog">Medium</i>, 17.06.2019.
         <!--@@check links at bottom of page-->
       </li>
+      <li>
+        <a href="https://accessible-pdf.info/de/" hreflang="de" lang="de">Barrierefreies <abbr>PDF</abbr></a>.
+        (Website by <span lang="de">Stefan Brechbühl</span> from Switzerland. Licence: Creative Commons Attribution 4.0 International.)
+      </li>
       <li><span lang="de">Stiftung «Zugang für alle»:
         <a href="https://www.access-for-all.ch/ch/pdf-werkstatt/pdf-accessibility-checker-pac.html" hreflang="de"><abbr>PDF</abbr> Accessibility Checker (<abbr>PAC</abbr> 3)</a></span>.
         This is a <abbr>PDF</abbr> accessibility checker for Microsoft Windows (all versions since Windows Vista).
