Add: Lawson: Web Accessibility Checklist: 16 Things to Improve Your Website Accessibility

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -55,6 +55,10 @@
 
     <h2>Web Accessibility: General / Introductions</h2>
     <ul>
+      <li>Lawson, Bruce:
+        <a href="https://websitesetup.org/web-accessibility-checklist/">Web Accessibility Checklist: 16 Things to Improve Your Website Accessibility</a>,
+        <i class="website">WebsiteSetup.org</i>, 09.03.2020.
+      </li>
       <li>University of Washington:
         <a href="http://www.washington.edu/accessibility/web/">Developing Accessible Websites</a>.
       </li>
