--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -408,6 +408,10 @@
         <i class="website">24 Accessibility</i>, 06.12.2019.
         <!--@@summarise-->
       </li>
+      <li>Hund, David:
+        <a href="https://gist.github.com/davidhund/564331193e1085208d7e">Figuring out the most robust, accessible markup for <abbr>SVG</abbr> Sprite Icons</a>,
+        <i class="website">davidhund on GitHub</i>, September 2015.
+      </li>
     </ul>
 
     <h3>Accessible <abbr title="Scalable Vector Graphis">SVG</abbr></h3>
