--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -699,6 +699,10 @@
         <a href="https://www.w3.org/WAI/GL/low-vision-a11y-tf/wiki/Placeholder_Research">Placeholder Research</a>,
         <i class="website">Low Vision Accessibility Task Force wiki (<abbr>W3C</abbr>)</i>.
       </li>
+      <li>Faulkner, Steve:
+        <a href="https://codepen.io/stevef/post/fielsdet-and-legend-semantics">Short note on fieldset and legend semantics</a>,
+        <i class="website">CodePen</i>, last updated 01.05.2019.
+      </li>
       <li><span lang="de">Caspers, Thomas:
         <a href="https://www.einfach-fuer-alle.de/artikel/barrierefreie-formulare/" hreflang="de">Reine Formsache</a>,
         <i class="website">Einfach für Alle</i></span> (no date).
