Update Disability Awareness and Support by University of Pittsburgh (Coursera)

--- a/courses.html
+++ b/courses.html
@@ -246,9 +246,12 @@
       </li>
       <li>
         <a href="https://www.coursera.org/learn/disability-awareness">Disability Awareness and Support</a>
-        is a four-week course by the University of Pittsburgh hosted on Coursera. According to the course description,
+        is a <abbr>MOOC</abbr> by the University of Pittsburgh hosted on Coursera.
+        The course should take approximately 7 hours to complete (at 1&ndash;2 hours per week).
+        According to the course description,
         <q>The goal of this course is to promote equal opportunity and the full participation of students with disabilities in higher education by helping participants advance their awareness of the meaning of accessibility in education.</q>
-        The latest run started on 26 February 2018.
+        <br />Originally (probably until early 2018), this was a four-week course.
+        <!--The latest run started on 26 February 2018.-->
       </li>
       <li>
         <a href="https://www.udemy.com/accessibility-features-on-android/">Accessibility Features on Android</a>
@@ -384,7 +387,9 @@
     </ul>
 
   </main>
-
+<!--MOOC platforms in Italy:
+  * Giulia Satta: "Le 10 migliori piattaforme MOOC in italiano e come puoi utilizzarle per la tua formazione ", Social Academy, 24.05.2016: https://www.socialacademy.com/academies/start-tutorial/posts/le-10-migliori-piattaforme-mooc-in-italiano-e-come-puoi-utilizzarle-per-la-tua-formazione
+-->
   <footer>
     <p id="licence"><a rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/"><img
