Add: a11y with Lindsey: Create custom keyboard accessible checkboxes

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -703,6 +703,10 @@
         <a href="https://codepen.io/stevef/post/fielsdet-and-legend-semantics">Short note on fieldset and legend semantics</a>,
         <i class="website">CodePen</i>, last updated 01.05.2019.
       </li>
+      <li>
+        <a href="https://www.a11ywithlindsey.com/blog/create-custom-keyboard-accesible-checkboxes">Create custom keyboard accessible checkboxes</a>,
+        <i class="blog">a11y with Lindsey</i>, 27.11.2018.
+      </li>
       <li><span lang="de">Caspers, Thomas:
         <a href="https://www.einfach-fuer-alle.de/artikel/barrierefreie-formulare/" hreflang="de">Reine Formsache</a>,
         <i class="website">Einfach für Alle</i></span> (no date).
