Add: Scott O'Hara: Accessible Styled Form Controls

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -707,6 +707,10 @@
         <a href="https://www.a11ywithlindsey.com/blog/create-custom-keyboard-accesible-checkboxes">Create custom keyboard accessible checkboxes</a>,
         <i class="blog">a11y with Lindsey</i>, 27.11.2018.
       </li>
+      <li>
+        <a href="https://scottaohara.github.io/a11y_styled_form_controls/src/checkbox/index.html">Accessible Styled Form Controls</a>,
+        <i class="website">Scott O'Hara</i>, 26.07.2018, updated on 16.12.2018.
+      </li>
       <li><span lang="de">Caspers, Thomas:
         <a href="https://www.einfach-fuer-alle.de/artikel/barrierefreie-formulare/" hreflang="de">Reine Formsache</a>,
         <i class="website">Einfach für Alle</i></span> (no date).
