--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -409,6 +409,10 @@
         <a href="https://medium.com/@jonbmetz/accessibility-is-a-process-not-a-project-ce1c1cdc3aa7#.2ai2udr4o">Accessibility is a Process, Not a Project</a>,
         <i class="blog">Medium</i>, 17.01.2016 (seven-minute read).
       </li>
+      <li><span lang="de">Zehe, Marco:
+        <a href="https://www.macwelt.de/ratgeber/Das-inklusive-Netz-Wie-machen-wir-das-Internet-barrierefrei-10721969.html" hreflang="de" lang="de">Das inklusive Netz: Wie machen wir das Internet barrierefrei?</a>,
+        <i class="website">Macwelt</i></span>, 14.02.2020.
+      </li>
     </ul>
 
     <h2>Braille</h2>
