Add: An Introduction to Accessibility and Inclusive Design

--- a/courses.html
+++ b/courses.html
@@ -59,6 +59,11 @@
     <p>This sections lists courses that provide a general introduction to <abbr>ICT</abbr> accessibility.</p>
     <ul>
       <li>
+        <a href="https://www.coursera.org/learn/accessibility">An Introduction to Accessibility and Inclusive Design</a>
+        is a <abbr>MOOC</abbr> created by the University of Illinois at Urbana-Champaign hosted on Coursera.
+        It should take learners approximately 24 hours to complete the course (at a rate of 6 hours per week).
+      </li>
+      <li>
         <a href="https://www.fun-mooc.fr/courses/course-v1:inria+41012+session02/about" hreflang="fr" lang="fr">Accessibilité Numérique</a>
         is a <abbr>MOOC</abbr> created by the <span lang="fr">Université de Bordeaux</span> in France.
         The <a href="https://www.fun-mooc.fr/courses/inria/41012/session01/about" hreflang="fr" lang="fr">first session</a>
