Swayam: Development of Assistive technology for persons with Disabilities

--- a/courses.html
+++ b/courses.html
@@ -209,6 +209,11 @@
     <h3>Other Accessibility-Related Topics</h3>
     <ul>
       <li>
+        <a href="https://swayam.gov.in/nd2_aic19_ge01/preview">Development of Assistive technology for persons with Disabilities</a>
+        is a course created by Indumathi Rao hosted on the Swayam platform in India.
+        The course is 24 weeks long.
+      </li>
+      <li>
         <a href="https://www.coursera.org/learn/inclusive-design">Basics of Inclusive Design for Online Education</a>
         is a five-week course by the University of Colorado Boulder hosted on Coursera.
         The course requires approximately 13 hours to complete (or a bit more than three hours per week).
