Add: Narayanan: Advanced Selenium Web Accessibility Testing

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1378,6 +1378,10 @@
         <i class="booktitle">Pro <abbr>HTML</abbr>5 Accessibility: Building an Inclusive Web</i>. Apress, 2012. (365 pages)
         <a href="https://www.apress.com/gp/book/9781430241942#otherversion=9781430241959"><abbr>ISBN</abbr> 978-1-4302-4194-2</a>.
       </li>
+      <li>Narayanan Palani:
+        <i class="booktitle">Advanced Selenium Web Accessibility Testing: Software Automation Testing Secrets Revealed</i>. Momentum Press, 2019. (121 pages)
+        <a href="http://www.momentumpress.net/books/advanced-selenium-web-accessibility-testing-software-automation-testing-secrets-revealed"><abbr>ISBN</abbr> 9781949449433</a>.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>.
