Add: Firth: Practical Web Inclusion and Accessibility

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1382,6 +1382,12 @@
         <i class="booktitle">Advanced Selenium Web Accessibility Testing: Software Automation Testing Secrets Revealed</i>. Momentum Press, 2019. (121 pages)
         <a href="http://www.momentumpress.net/books/advanced-selenium-web-accessibility-testing-software-automation-testing-secrets-revealed"><abbr>ISBN</abbr> 9781949449433</a>.
       </li>
+      <li>Firth, Ashley:
+        <i class="booktitle">Practical Web Inclusion and Accessibility: A Comprehensive Guide to Access Needs</i>. Apress, 2019.
+        <a href="https://www.apress.com/de/book/9781484254516"><abbr>ISBN</abbr> 978-1-4842-5451-6</a>.
+        <br />From the publisher's book description:
+        <q>Going beyond advice tailored solely for developers, this book offers potential improvements for designers, developers, user experience professionals, <abbr>QA</abbr> and testers, so that everyone involved in building a website can engage with the concepts without the need to understand how to code.</q>
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>.
