Add: Dowden: Approachable Accessibility: Planning for Success

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1388,6 +1388,12 @@
         <br />From the publisher's book description:
         <q>Going beyond advice tailored solely for developers, this book offers potential improvements for designers, developers, user experience professionals, <abbr>QA</abbr> and testers, so that everyone involved in building a website can engage with the concepts without the need to understand how to code.</q>
       </li>
+      <li>Dowden, Martine; Dowden, Michael:
+        <i class="booktitle">Approachable Accessibility: Planning for Success</i>. Apress, 2019. (120 pages)
+        <a href="https://www.apress.com/de/book/9781484248805"><abbr>ISBN</abbr> 978-1-4842-4880-5</a>.
+        <br />From the publisher's book description:
+        <q>This book makes the topic of web accessibility as approachable as possible to help every web professional become an accessibility advocate at their companies, on their projects, and in their communities.</q>
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>.
