Add: Chang School: Web Accessibility for Developers: Essential Skills for Web Developers

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1394,6 +1394,10 @@
         <br />From the publisher's book description:
         <q>This book makes the topic of web accessibility as approachable as possible to help every web professional become an accessibility advocate at their companies, on their projects, and in their communities.</q>
       </li>
+      <li>Digital Education Strategies, The Chang School:
+        <a href="https://pressbooks.library.ryerson.ca/wafd/"><i class="booktitle">Web Accessibility for Developers: Essential Skills for Web Developers</i></a>.
+        <br />Published in November 2019 and available under the terms of the Creative Commons Attribution ShareAlike licence.
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>.
