Add: Metts & Welfle: Standards for Writing Accessibly

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -1158,6 +1158,11 @@
       <li>
         <a href="https://easy-to-read.eu/">Easy-to-Read: European Easy-to-Read Guidelines</a>.
       </li>
+      <li>Metts, Michael J.; Welfle, Andy:
+        <a href="https://alistapart.com/article/standards-for-writing-accessibly/">Standards for Writing Accessibly</a>,
+        <i class="website">A List Apart</i>, 23.01.2020.
+        <!--@@summarise-->
+      </li>
     </ul>
     <p>Readability of web content in German:</p>
     <ul>
