Add: Garaventa: How the W3C Text Alternative Computation Works

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -425,6 +425,11 @@
         <i class="blog">Paciello Group blog</i>, 17.08.2011.
         <br />At the time when this blog post was written, <abbr>SVG</abbr> support in assistive technology was almost non-existent.
       </li>
+      <li>Garaventa, Bryan:
+        <a href="https://www.levelaccess.com/how-the-w3c-text-alternative-computation-works/">How the <abbr>W3C</abbr> Text Alternative Computation Works</a>,
+        <a href="website">Level Access</a>, 21.12.2015.
+        <!--@@reread!-->
+      </li>
     </ul>
 
     <h3>Accessible <abbr title="Scalable Vector Graphis">SVG</abbr></h3>
