Add: Dambrosio: Accessible Web Design Checklist for WordPress

--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -421,6 +421,10 @@
         <a href="https://github.com/joedolson/access-monitor/blob/master/gpl.txt"><abbr>GNU</abbr> 
         <abbr lang="en-US" title="General Public License">GPL</abbr> version 3</a>.
       </li>
+      <li>Dambrosio, Danny:
+        <a href="https://nextoronto.com/accessible-web-design-checklist-for-wordpress/">Accessible Web Design Checklist for WordPress</a>,
+        <i class="website">NexToronto</i>, 06.09.2019.
+      </li>
       <li>Graham Armfield
         <a href="http://www.headstar.com/eablive/?p=1113">Special report: How accessible is WordPress?</a>,
         23 February 2016.
