--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -1467,7 +1467,7 @@
         Finally, the article creates the myth of &ldquo;accessibility extremists&rdquo;:
         <q>Accessibility extremists tend to discount aesthetics.</q>
         <br />For other comments, see
-        <a href="https://twitter.com/stevefaulkner/status/1197836591533826049">Steve Faulkner's twee, 22.11.2019</a>.
+        <a href="https://twitter.com/stevefaulkner/status/1197836591533826049">Steve Faulkner's tweet, 22.11.2019</a>.
       </li>
       <!--Other article by same author: "The Myths of Color Contrast Accessibility", 16.10.2019: https://uxmovement.com/buttons/the-myths-of-color-contrast-accessibility/
             Response by Andrew Somers, Senior Color Science Researcher, Myndex Technologies, 17.10.2019, https://uxmovement.com/buttons/the-myths-of-color-contrast-accessibility/#comment-92567
