Add: ShortcutWorld.com

--- a/accessibilityforusers.html
+++ b/accessibilityforusers.html
@@ -189,6 +189,10 @@
         this site <q>was created with the goal of making it a Firefox accessibility web portal for end users</q>.
         (It is not clear whether this site is still being maintained. It was last updated in 2017.)
       </li>
+      <li>
+        <a href="https://shortcutworld.com/">ShortcutWorld.com</a>:
+        <q>n open, wiki-style Reference Database for Keyboard Shortcuts</q>.
+      </li>
     </ul>
   </main>
 
