Add: RKW: Barrierefreiheit im Web

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -196,6 +196,10 @@
         <i class="blog">Cetis Blog</i>, 29.01.2007.
         <!--@@PDF-->
       </li>
+      <li><span lang="de">
+        <a href="https://www.rkw-kompetenzzentrum.de/innovation/faktenblatt/barrierefreiheit-im-web/was-bedeutet-barrierefreiheit-im-web/" hreflang="de">Barrierefreiheit im Web</a>,
+        <i class="website"><abbr>RKW</abbr>-Kompetenzzentrum</i></span>, 2013.
+      </li>
     </ul>
 
     <h2>Support in Assistive Technolgies</h2>
