Add: Twitter Help: How to make images accessible for people

--- a/webaccessibilitytechniques.html
+++ b/webaccessibilitytechniques.html
@@ -446,6 +446,11 @@
         <a href="website">Level Access</a>, 21.12.2015.
         <!--@@reread!-->
       </li>
+      <li>
+        <a href="https://help.twitter.com/en/using-twitter/picture-descriptions">How to make images accessible for people</a>,
+        <i class="website">Twitter Help Center</i>.
+        This explains how to add text descriptions to images you post on Twitter.
+      </li>
     </ul>
 
     <h3>Accessible <abbr title="Scalable Vector Graphis">SVG</abbr></h3>
