Add: www.colourblindawareness.org

--- a/miscellaneous-links.html
+++ b/miscellaneous-links.html
@@ -215,6 +215,7 @@
       <li>Barclays:
         <a href="https://www.barclayscorporate.com/insight-and-research/managing-your-business/making-your-business-accessible/inclusive-design.html">Inclusive Design</a>.
       </li>
+      <!--@@separate section on colour blindness-->
       <li>Coady, Geri:
         <a href="https://24ways.org/2012/colour-accessibility/">Colour Accessibility</a>,
         <i class="website">24 Way to Impress Your Friends</i>, 04.12.2012.
@@ -1448,6 +1449,10 @@
           ISO/IEC TR 13066-2:2016(en): Information technology — Interoperability with assistive technology (AT) — Part 2: Windows accessibility application programming interface (API): https://www.iso.org/obp/ui/#iso:std:iso-iec:tr:13066:-2:ed-2:v1:en
           ISO/IEC TR 13066-4:2015: Information technology -- Interoperability with assistive technology (AT) -- Part 4: Linux/UNIX graphical environments accessibility API: https://www.iso.org/standard/54001.html
         -->
+      </li>
+      <li>
+        <a href="http://www.colourblindawareness.org/colour-blindness/">Colour Blindness</a>,
+        <i class="website">Colour Blind Awareness</i>.
       </li>
       <li>anthony:
         <a href="https://uxmovement.com/thinking/the-aesthetic-accessibility-paradox/">The Aesthetic-Accessibility Paradox</a>,
