Add: Next Stop, Section 508: Navigating Video Accessibility Laws

--- a/contentaccessibility.html
+++ b/contentaccessibility.html
@@ -509,6 +509,10 @@
         <a href="http://terrillthompson.com/blog/648">Handling Captions via the YouTube Player <abbr>API</abbr></a>,
         <i class="blog">Terrill Thompson</i>, 13.04.2015.
       </li>
+      <li>Edelberg, Elisa:
+        <a href="https://www.td.org/insights/next-stop-section-508-navigating-video-accessibility-laws">Next Stop, Section 508: Navigating Video Accessibility Laws</a>,
+        <i class="website">Association for Talent Development</i>, 28.04.2020.
+      </li>
     </ul>
 
     <h3 id="audio-description">Audio Description</h3>
