Add: What is the European accessibility standard EN 301 549?

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -295,6 +295,11 @@
             <a href="http://mandate376.standards.eu/standard">Standard - <abbr>EN</abbr> 301 549: Accessible <abbr>ICT</abbr> Procurement Toolkit</a>.
           </li>
           <!--"Guidance for application of the Accessibility Standard EN 301 ...": https://www.pts.se/globalassets/startpage/dokument/icke-legala-dokument/rapporter/2016/ovrigt/guidance-for-the-accessibility-standard-en-301-5491.pdf -->
+          <li>
+            <a href="https://www.youtube.com/watch?v=atUPWyCC_Jc">What is the European accessibility standard <abbr>EN</abbr> 301 549?</a>
+            (<i class="ytchannel">Deque Systems</i> on YouTube, 12 minutes, 18.02.2019.
+            <br />This is an introduction to the standard presented as an interview with Shadi Abou-Zahra of the World Wide Web Consortium (<abbr>W3C</abbr>).
+          </li>
         </ul>
       </li>
       <li><abbr>W3C</abbr>:
