--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -185,7 +185,7 @@
       <li>
         <a href="https://www.youtube.com/watch?v=vAcYipyXGvc">Word and <abbr>NVDA</abbr> screen reader demonstration</a>,
         <i class="ytchannel">eLaHub</i> on YouTube, 8 minutes, 06.02.2019.
-        <br />This video show how screen reader short cuts can be used to navigate a document's headings,
+        <br />This video shows how screen reader short cuts can be used to navigate a document's headings,
         how alternative text can be added to images and tables, how <abbr>NVDA</abbr> reads these text alternatives
         and finally shows how text-to-speech software such as Read Aloud does not recognise headers
         and ignores the text alternatives for images and tables.
