Add: Unified Listing (GPII)

--- a/assistivetechnology.html
+++ b/assistivetechnology.html
@@ -50,6 +50,10 @@
       provides a 
       <q>European search engine on Assistive Technology, working in all languages of the European Union</q>.
     </p>
+    <p>The <a href="https://ul.gpii.net/">Unified Listing</a>
+      provided by the Global Public Inclusive Infrastructure (<abbr>GPII</abbr>)
+      allows you to search twelve databases of assistive technologies and other accessibility solutions.
+    </p>
     <p>The page 
       <a href="https://wiki.gpii.net/w/ATDatabases"><abbr>AT</abbr>Databases</a>
       in the <abbr>GPII</abbr> wiki contains a list of databases of assistive technologies.
