Delete ALDO Project. Moodle plugin probably outdated.

--- a/elearning.html
+++ b/elearning.html
@@ -47,7 +47,8 @@
   <!-- 
     The two learning management systems with the longest record of accessibility efforts are probably ATutor and Moodle:
     ATutor: Accessibility Features: http://www.atutor.ca/atutor/docs/atutor_access.php
-    Moodle: @@
+    Moodle: Accessibility: https://docs.moodle.org/dev/Accessibility
+    ILIAS: no page dedicated to accessibility.
   -->
     <h2 id="ims"><abbr>IMS</abbr> Global Learning Consortium</h2>
     <ul>
@@ -79,14 +80,18 @@
           to ensure full participation of people with disabilities in online learning experiences.
         </p></blockquote>
       </li>
-      <li><a href="http://aldoproject.eu/">The <abbr>ALDO</abbr> Project</a>:
+      <li><del datetime="2020-05-12">"<a href="http://aldoproject.eu/">The <abbr>ALDO</abbr> Project</a>:
         <abbr>ALDO</abbr> stands for &ldquo;Adults with a Learning Disability, 
         Observatory of Best Practise&rdquo;.
         The project <q cite="http://aldoproject.eu/aims_en.html">aims to support improvements 
         in the quality and accessibility of education and training for adults with a learning disability 
         by identifying and validating best practice approaches; to promote increased use of the 
         best practice resources identified by raising awareness of the resources and 
-        presenting them in one central online portal or observatory.</q></li>
+        presenting them in one central online portal or observatory.</q></del>
+        <ins datetime="2020-05-12">The
+        <a href="https://www.easpd.eu/en/content/aldo">ALDO project's</a>
+        website is no longer online.
+      </li>
       <li><a href="http://www.aemanet.eu/en"><abbr>AEMA</abbr></a>:
         Adult Education Made Easy.<br />
         <a href="http://www.aemanet.eu/en/aemanews/accessibility-criteria-providers-adult-education-european-countries">Accessibility 
@@ -103,7 +108,8 @@
         checking, each time they upload a <abbr>PDF</abbr> file, if it is accessible.</q>
         Licence: 
         <a href="https://github.com/dslab-epfl/accessibility-checker/blob/master/COPYING.txt"><abbr>GNU</abbr> 
-        <abbr lang="en-US" title="General Public License">GPL</abbr> version 3</a>. 
+        <abbr lang="en-US" title="General Public License">GPL</abbr> version 3</a>.
+        <br />Note that this plugin was originally developed for Moodle 2.6.2, which reached end of life in 2015.
       </li>
       <li>
         <a href="https://github.com/ucfcdl/UDOIT">Universal Design Online content Inspection Tool (<abbr>UDOIT</abbr>)</a>:
